# project3

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  array.c  array.h  badness.lua  carray.c  carray.h  compile.c  config.lua  corr.gp  cvect.h  evaluate.c  expr.c  expr.h  expr_parser.y  harmosc1.lua  harmosca.lua  hash.h  hashmap.c  hashmap.h  init.gp  lexer.rl  makefile  numerov.c  numerov.h  peaks.c  peaks.h  plots.gp  projekt.c  simple.lua  simulate.c  simulation.c  simulation.h  spektrum.gp  splitop.c  splitop.h  square.lua  square1.lua  (+5 more)
doc/: .gitignore  acl2005.sty  lstlang3.sty  projekt3.tex
harmosc1/: config.ser
harmosca/: config.ser
presets/: badness.lua  cmp.inc  cmp.lua  cmp1.lua  cmp10k.lua  cmp2.lua  cmp20k.lua  cmp30k.lua  cmp40k.lua  cmp50k.lua  harmosca.lua  simple.lua  square.lua  square1.lua  test.lua
scripts/: bspektrum.gp  complex.lua  dump.lua  init.gp  konv.gp  listgen.lua  listgen_transposed.lua  relen.gp  spektrum.gp  tabgen.lua
simple/: config.ser
source/: akima.c  akima.h  array.c  array.h  carray.c  carray.h  evaluate.c  numerov.c  numerov.h  peaks.c  peaks.h  simulation.c  simulation.h  splitop.c  splitop.h  squares.c  squares.h
square/: config.ser
square1/: config.ser
